@@ -110,7 +110,7 @@ public class DefaultSignalMastManagerXml
                 String adapterName = e.getAttribute("class").getValue();
                 log.debug("load via " + adapterName);
                 try {
-                    XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).newInstance();
+                    XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).getDeclaredConstructor().newInstance();
                     // and do it
                     adapter.load(e, null);
                 } catch (Exception ex) {
@@ -126,7 +126,7 @@ public class DefaultSignalMastManagerXml
                 String adapterName = e.getAttribute("class").getValue();
                 log.debug("load via " + adapterName);
                 try {
-                    XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).newInstance();
+                    XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).getDeclaredConstructor().newInstance();
                     // and do it
                     adapter.load(e, null);
                 } catch (Exception ex) {
@@ -142,7 +142,7 @@ public class DefaultSignalMastManagerXml
                 String adapterName = e.getAttribute("class").getValue();
                 log.debug("load via " + adapterName);
                 try {
-                    XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).newInstance();
+                    XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).getDeclaredConstructor().newInstance();
                     // and do it
                     adapter.load(e, null);
                 } catch (Exception ex) {
@@ -158,7 +158,7 @@ public class DefaultSignalMastManagerXml
                 String adapterName = e.getAttribute("class").getValue();
                 log.debug("load via " + adapterName);
                 try {
-                    XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).newInstance();
+                    XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).getDeclaredConstructor().newInstance();
                     // and do it
                     adapter.load(e, null);
                 } catch (Exception ex) {
@@ -174,7 +174,7 @@ public class DefaultSignalMastManagerXml
                 String adapterName = e.getAttribute("class").getValue();
                 log.debug("load via " + adapterName);
                 try {
-                    XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).newInstance();
+                    XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).getDeclaredConstructor().newInstance();
                     // and do it
                     adapter.load(e, null);
                 } catch (Exception ex) {
@@ -190,7 +190,7 @@ public class DefaultSignalMastManagerXml
                 String adapterName = e.getAttribute("class").getValue();
                 log.debug("load via " + adapterName);
                 try {
-                    XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).newInstance();
+                    XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).getDeclaredConstructor().newInstance();
                     // and do it
                     adapter.load(e, null);
                 } catch (Exception ex) {
